--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <title>First HTML pages</title>
 </head>
 <body>
-
-<h1>Test1 c</h1>
+<body bgcolor=FFFF00>
+<h1><b>Test1 c<b></h1>
 <p>This is a paragraph.</p> <br>
 
 </body>
