--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>First HTML pages</title>
 </head>
 <body>
+<hr size=5>
 <body bgcolor=FFFF00>
 <h1><b>Test1 c<b></h1>
 <p>This is a paragraph.</p> <br>
