--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 <title>First HTML pages</title>
 </head>
 <body>
-<hr size=5>
 <body bgcolor=FFFF00>
-<h1><b>Test1 c<b></h1>
+<h1><b>Test1 <b></h1>
+<hr size=9>
+<hr width=99>
 <p>This is a paragraph.</p> <br>
 
 </body>
